[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.33", features = ["macros", "net", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["full"] }
futures = "0.3.28"
rand = "0.8"
