[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "A simple echo server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["macros", "net", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["full"] }
